# measure

./: .gitignore  01-lcg-random  CMakeLists.txt  LICENSE  NOTES.md  README.md
include/: measure.h
src/: 01-lcg-random.cpp  02-lcg-random-mod.cpp
